@@ -1,3 +1,9 @@
+2004-01-22  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* foomatic-configure.in: Eliminated warnings which appeared since
+	  the insertion of "use strict;". Thanks to the hint from
+	  Marcelo Ricardo Leitner (mrl at conectiva dot com dot br).
+
 2004-01-22  Tim Waugh  <twaugh@redhat.com>
 
 	* lib/Foomatic/DB.pm (perltoxml): New function.
